--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="first-container-overlay"></div>
 
         <div class="title-container">
-            <img src="..\Portfolio\Pictures\e8577c6f-ca6c-4337-b421-e143429dde41-removebg-preview.png" alt="">
+            <img src="./Pictures/e8577c6f-ca6c-4337-b421-e143429dde41-removebg-preview.png" alt="">
             <img src="..\Portfolio\Pictures\61310c63-2df3-475b-9fa2-04516159a28e-removebg-preview.png" alt="">
             <h1>Ayella Czarina Cariño</h1>
             <h2>Program</h2>
