--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </div>
 
     <div class="home-1st-container">
-        <img src="..\Portfolio\Pictures\e7c6d4b1-6145-49ce-99c5-e7cf880e09b3.jpeg" alt="">
+<img src="Pictures/e7c6d4b1-6145-49ce-99c5-e7cf880e09b3.jpeg" alt="">
 
-        <div class="first-container-overlay"></div>
+<div class="first-container-overlay"></div>
 
-        <div class="title-container">
-            <img src="./Pictures/e8577c6f-ca6c-4337-b421-e143429dde41-removebg-preview.png" alt="">
-            <img src="..\Portfolio\Pictures\61310c63-2df3-475b-9fa2-04516159a28e-removebg-preview.png" alt="">
-            <h1>Ayella Czarina Cariño</h1>
-            <h2>Program</h2>
-        </div>
+<div class="title-container">
+    <img src="Pictures/e8577c6f-ca6c-4337-b421-e143429dde41-removebg-preview.png" alt="">
+    <img src="Pictures/61310c63-2df3-475b-9fa2-04516159a28e-removebg-preview.png" alt="">
+    <h1>Ayella Czarina Cariño</h1>
+    <h2>Program</h2>
+</div>
     </div>
 
     <div class="home-2nd-container">
