--- a/self-assessment.html
+++ b/self-assessment.html
@@ -21,36 +21,36 @@
 
     <div class="assessment-first-container">
 
-        <img src="..\Portfolio\Pictures\e7c6d4b1-6145-49ce-99c5-e7cf880e09b3.jpeg" alt="">
+        <img src="Pictures/e7c6d4b1-6145-49ce-99c5-e7cf880e09b3.jpeg" alt="">
 
         <div class="first-container-overlay"></div>
         
-        <iframe src="..\Portfolio\Files\Self-assessment\STATS_Self-Assessment Tool for Aspiring Teacher Stage.pdf" frameborder="0"></iframe>
+        <iframe src="Files/Self-assessment/STATS_Self-Assessment Tool for Aspiring Teacher Stage.pdf" frameborder="0"></iframe>
     </div>
 
     <div class="assessment-second-container">
         <div class="assessment-img-holder">
-            <img src="..\Portfolio\Files\Self-assessment\Screenshot 2025-11-11 144453.png" alt="">
+            <img src="Files/Self-assessment/Screenshot 2025-11-11 144453.png" alt="">
         </div>
 
         <div class="assessment-img-holder">
-            <img src="..\Portfolio\Files\Self-assessment\Screenshot 2025-11-11 144510.png" alt="">
+            <img src="Files/Self-assessment/Screenshot 2025-11-11 144510.png" alt="">
         </div>
 
         <div class="assessment-img-holder">
-            <img src="..\Portfolio\Files\Self-assessment\Screenshot 2025-11-11 144534.png" alt="">
+            <img src="Files/Self-assessment/Screenshot 2025-11-11 144534.png" alt="">
         </div>
 
         <div class="assessment-img-holder">
-            <img src="..\Portfolio\Files\Self-assessment\Screenshot 2025-11-11 144552.png" alt="">
+            <img src="Files/Self-assessment/Screenshot 2025-11-11 144552.png" alt="">
         </div>
 
         <div class="assessment-img-holder">
-            <img src="..\Portfolio\Files\Self-assessment\Screenshot 2025-11-11 144612.png" alt="">
+            <img src="Files/Self-assessment/Screenshot 2025-11-11 144612.png" alt="">
         </div>
 
         <div class="assessment-img-holder">
-            <img src="..\Portfolio\Files\Self-assessment\Screenshot 2025-11-11 144632.png" alt="">
+            <img src="Files/Self-assessment/Screenshot 2025-11-11 144632.png" alt="">
         </div>
 
     </div>
