--- a/1styear.html
+++ b/1styear.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,18 +21,18 @@
 
     <div class="first-1st-container">
 
-        <img src="..\Portfolio\Pictures\e7c6d4b1-6145-49ce-99c5-e7cf880e09b3.jpeg" alt="">
+        <img src="Pictures/e7c6d4b1-6145-49ce-99c5-e7cf880e09b3.jpeg" alt="">
 
         <div class="first-container-overlay"></div>
         
         <iframe class="iframe1" name="1st-year-activity-frame" src="" frameborder="0"></iframe>
 
         <div class="activity-items">
-            <p><a href="..\Portfolio\Files\1st year\Activity 2\ACT2P1.html" target="1st-year-activity-frame">Design Thinker and Innovator</a></p>
-            <p><a href="..\Portfolio\Files\1st year\Digital Literate and Data-Driven Decision Maker\3P1.html" target="1st-year-activity-frame">Digital Literate and Data-Driven Decision Maker</a></p>
-            <p><a href="..\Portfolio\Files\1st year\Discerning and Compassionate Person\4P1.html" target="1st-year-activity-frame">Discerning and Compassionate Person</a></p>
-            <p><a href="..\Portfolio\Files\1st year\Dynamic Lifelong Learner and Leader\5P1.html" target="1st-year-activity-frame">Dynamic Lifelong Learner and Leader</a></p>
-            <p><a href="..\Portfolio\Files\1st year\Exam\EXAM1.html" target="1st-year-activity-frame">EXAM</a></p>
+            <p><a href="Files/1st year/Activity 2/ACT2P1.html" target="1st-year-activity-frame">Design Thinker and Innovator</a></p>
+            <p><a href="Files/1st year/Digital Literate and Data-Driven Decision Maker/3P1.html" target="1st-year-activity-frame">Digital Literate and Data-Driven Decision Maker</a></p>
+            <p><a href="Files/1st year/Discerning and Compassionate Person/4P1.html" target="1st-year-activity-frame">Discerning and Compassionate Person</a></p>
+            <p><a href="Files/1st year/Dynamic Lifelong Learner and Leader/5P1.html" target="1st-year-activity-frame">Dynamic Lifelong Learner and Leader</a></p>
+            <p><a href="Files/1st year/Exam/EXAM1.html" target="1st-year-activity-frame">EXAM</a></p>
         </div>
     </div>
 </body>
