--- a/1styear.html
+++ b/1styear.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <div class="home-navigation">
-        <p><a href="Homepage.html">Developmental Portfolio</a></p>
+        <p><a href="index.html">Developmental Portfolio</a></p>
 
         <div class="Menu-container">
             <p>Menu ↓</p>
